Refactor configuration for user quota and upload size; enhance upload error handling and logging

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,8 @@ DB_PASSWORD=trove_dev_password
 # DB_PATH=./data/trove.db
 
 STORAGE_PATH=./data/files
-DEFAULT_USER_QUOTA=10737418240      # 10GB in bytes
-MAX_UPLOAD_SIZE=524288000           # 500MB in bytes
+DEFAULT_USER_QUOTA=10G              # Supports: B, K/KB, M/MB, G/GB, T/TB or raw bytes
+MAX_UPLOAD_SIZE=500M                # Supports: B, K/KB, M/MB, G/GB, T/TB or raw bytes
 
 SESSION_SECRET=change_this_to_a_random_secret_in_production
 SESSION_DURATION=168h               # 7 days
