Refactor environment configuration and add installation guide; update Docker Compose setup for production and development

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 # Server Configuration
-PORT=8080
-HOST=0.0.0.0
 ENV=development
 
+# Port to access Trove on your host machine
+TROVE_PORT=8080
+
+# Database Configuration
 DB_TYPE=postgres                    # Options: sqlite, postgres
 DB_HOST=postgres 
 DB_PORT=5432
@@ -17,10 +19,15 @@ STORAGE_PATH=./data/files
 DEFAULT_USER_QUOTA=10G              # Supports: B, K/KB, M/MB, G/GB, T/TB or raw bytes
 MAX_UPLOAD_SIZE=500M                # Supports: B, K/KB, M/MB, G/GB, T/TB or raw bytes
 
+# Security
 SESSION_SECRET=change_this_to_a_random_secret_in_production
-SESSION_DURATION=168h               # 7 days
-BCRYPT_COST=10
 CSRF_ENABLED=true
 
 ENABLE_REGISTRATION=true
 ENABLE_FILE_DEDUPLICATION=true
+
+# Advanced (defaults are sensible, only change if needed)
+# PORT=8080                         # Container internal port (default: 8080)
+# HOST=0.0.0.0                      # Container bind address (default: 0.0.0.0)
+# SESSION_DURATION=168h             # Session expiry (default: 7 days)
+# BCRYPT_COST=10                    # Password hashing cost (default: 10, range: 10-14)
