--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,10 +7,18 @@ on:
 
 permissions:
   contents: write
+  packages: write
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   release:
     runs-on: ubuntu-latest
+    environment:
+      name: production
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -18,7 +26,20 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23'
+          go-version: '1.25'
+
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
+      - name: Run tests
+        run: go test -v ./...
 
       - name: Install Tailwind CSS CLI (amd64)
         run: |
@@ -65,6 +86,43 @@ jobs:
         run: |
           sha256sum trove-* > checksums.txt
 
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Get commit SHA
+        id: get_sha
+        run: echo "sha=sha-$(git rev-parse --short=7 HEAD)" >> $GITHUB_OUTPUT
+
+      - name: Pull existing Docker image
+        run: |
+          docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.get_sha.outputs.sha }}
+
+      - name: Extract version tags
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+
+      - name: Re-tag and push Docker image
+        run: |
+          SOURCE_IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.get_sha.outputs.sha }}"
+          
+          # Read all tags and re-tag the image
+          echo "${{ steps.meta.outputs.tags }}" | while read -r tag; do
+            if [ -n "$tag" ]; then
+              echo "Tagging $SOURCE_IMAGE as $tag"
+              docker buildx imagetools create --tag "$tag" "$SOURCE_IMAGE"
+            fi
+          done
+
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
@@ -78,3 +136,30 @@ jobs:
           draft: false
           prerelease: false
           generate_release_notes: true
+          body: |
+            ## 🐳 Docker Images
+            
+            Pull this release:
+            ```bash
+            docker pull ghcr.io/agjmills/trove:${{ github.ref_name }}
+            ```
+            
+            Available tags:
+            - `ghcr.io/agjmills/trove:${{ github.ref_name }}` - Full version
+            - `ghcr.io/agjmills/trove:$(echo ${{ github.ref_name }} | cut -d. -f1,2)` - Minor version
+            - `ghcr.io/agjmills/trove:$(echo ${{ github.ref_name }} | cut -d. -f1)` - Major version
+            
+            ## 📦 Installation
+            
+            Download the appropriate binary for your system from the Assets section below, then:
+            
+            ```bash
+            # Make it executable
+            chmod +x trove-*
+            
+            # Verify checksum
+            sha256sum -c checksums.txt
+            
+            # Run
+            ./trove-linux-amd64
+            ```
