--- a/.env.example
+++ b/.env.example
@@ -21,12 +21,14 @@ STORAGE_PATH=./data/files           # For disk backend
 # TEMP_DIR=/tmp                     # Temp directory for uploads (defaults to system temp)
 
 # S3 Configuration (if STORAGE_BACKEND=s3)
-# S3_ENDPOINT=http://rustfs:9000    # For local dev with rustfs, or leave empty for AWS
-# S3_REGION=us-east-1
-# S3_BUCKET=trove
-# S3_ACCESS_KEY=rustfsadmin
-# S3_SECRET_KEY=rustfsadmin
-# S3_USE_PATH_STYLE=true            # Required for rustfs, false for AWS
+# Uses AWS SDK defaults for credentials and endpoint:
+#   - AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY (credentials)
+#   - AWS_REGION (region)
+#   - AWS_ENDPOINT_URL (custom endpoint for S3-compatible services)
+#   - ~/.aws/credentials and ~/.aws/config (shared config)
+#   - IAM roles (EC2/ECS/Lambda)
+S3_BUCKET=trove                     # Required: bucket name
+S3_USE_PATH_STYLE=false             # Set to true for MinIO/rustfs
 
 DEFAULT_USER_QUOTA=10G              # Supports: B, K/KB, M/MB, G/GB, T/TB or raw bytes
 MAX_UPLOAD_SIZE=500M                # Supports: B, K/KB, M/MB, G/GB, T/TB or raw bytes
