feat: add /tmp volume mount for file uploads in Docker setup

--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./data:/app/data
       - trove-files:/app/data/files
+      - /tmp
     env_file:
       - .env
     environment:
