Implement soft delete functionality for files and folders, add deleted items page, and update routes and templates accordingly

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,10 @@ CSRF_ENABLED=true
 ENABLE_REGISTRATION=true
 ENABLE_FILE_DEDUPLICATION=true
 
+# Deleted Items
+DELETED_RETENTION_DAYS=30           # Days before deleted items are permanently removed (default: 30)
+# DELETED_CLEANUP_INTERVAL_MIN=60   # How often to run cleanup in minutes (default: 60)
+
 # Advanced (defaults are sensible, only change if needed)
 # PORT=8080                         # Container internal port (default: 8080)
 # HOST=0.0.0.0                      # Container bind address (default: 0.0.0.0)
